--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About Blocitoff</h1>
-<p>Created by: Me</p>
+<div class="container">
+  <h1>About Blocitoff</h1>
+  <p>Created by: Me</p>
+</div>
