--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Welcome to Blocitoff</h1>
-<!-- <p id="index-title">This is the home page for Blocitoff.</p> -->
-<div class="posts">'To do' 1 goes here.</div>
-<!-- <div class="posts">'To do' 2 goes here.</div> -->
-<!-- <section>I am the content in a section element.</section> -->
+<div class="container">
+  <h1>Welcome to Blocitoff</h1>
+  <div class="posts">'To do' 1 goes here.</div>
+</div>
