--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for [user, item], remote: true do |f| %>
   <div class="form-group">
-    <%= f.item :name, class: 'sr-only' %>
+    <%= f.label :item, class: 'sr-only' %>
     <%= f.text_field :name, class: 'form-control', placeholder: "Enter a new to-do item." %>
   </div>
   <%= f.submit "Submit item", class: 'btn btn-default pull-right' %>
