--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
 <h1>User Information</h1>
-<p>Find me in app/views/users/show.html.erb</p>
 <div class="row">
   <div class="col-md-4">
     <div class="media">
@@ -11,3 +10,7 @@
     </div>
   </div>
 </div>
+
+<%= render @user.items %>
+
+<%= render partial:'items/form', locals: { user: @user, item: Item.new } %>
