--- a/app/views/items/destroy.js.erb
+++ b/app/views/items/destroy.js.erb
@@ -1,11 +1,5 @@
-// <h1>Items#destroy</h1>
-// <p>Find me in app/views/items/destroy.html.erb</p>
-
-$('#item-<% @item.id %>').hide();
-
 <% if @item.destroyed? %>
-  $('#item-<%= @item.id %>').hide();
-  $('.js-items.count').html("<= pluralize(@user.items.count, 'item')%>");
+  $('#item-<%= @item.id %>').fadeOut(1000);
 <% else %>
   $('.flash').prepend("<div class='alert alert-danger'><button type='button' class='close' data-dismiss='alert'>&times;</button><%= flash.now[:alert] %></div>");
 <% end %>
