--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,33 @@
   </div>
 </div>
 
-<%= render @user.items %>
+<div class="row">
+  <div class="col-md-8">
+    <div class="media">
+      <div class="media-body">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Description</th>
+              <th>Complete</th>
+            </tr>
+          </thead>
 
-<%= render partial:'items/form', locals: { user: @user, item: Item.new } %>
+          <tbody>
+            <tr class='js-items'>
+              <%= render @user.items %>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-8">
+    <%= render partial:'items/form', locals: { user: @user, item: Item.new } %>
+  </div>
+</div>
+
+<%#= render @user.items %>
