--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,6 +1,6 @@
 <tbody>
-  <%= content_tag :div, class: 'media', id: "item-#{item.id}" do %>
+  <%= content_tag :tr, class: "media", id: "item-#{item.id}" do %>
     <td><%= item.name %></td>
-    <td><%= link_to "", [current_user, item], method: :delete, class: 'glyphicon glyphicon-ok' %></td>
+    <td><%= link_to "", [current_user, item], method: :delete, class: 'glyphicon glyphicon-ok', remote: true %></td>
   <% end %>
 </tbody>
