Resolve duplicate Item creation, time remaining display

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,6 +1,6 @@
 <h4>Add an item</h4>
 
-<%= form_for [user, item], remote: true do |f| %>
+<%= form_for [user, item] do |f| %>
   <div class="form-group">
     <%= f.label :item, class: 'sr-only' %>
     <%= f.text_field :name, class: 'form-control', placeholder: "Enter a new to-do item." %>
