--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,6 +20,8 @@
             <tr>
               <th>Description</th>
               <th>Complete</th>
+              <th>Time Remaining</th>
+              <th>Created At</th>
             </tr>
           </thead>
 
